# notes

./: .env.example  .gitignore  LICENSE  README.md  backend.py  backend_ai.py  backend_tools.py  backend_utils.py  build.bat  components.d.ts  electron-builder.yml  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
backend/: Notes.spec  backend.py  backend_ai.py  backend_tools.py  backend_utils.py  main.py
scripts/: apply-android-signing.ps1
server/: app.ts  electron.ts  main.ts  preload.ts  tsconfig.json
server/ai/: stream.ts  tools.ts
server/middleware/: apiResponse.ts  validate.ts
server/routes/: ai.ts  export.ts  notes.ts
server/services/: database.ts  noteFile.ts
server/types/: index.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  keystore.jks  tauri.conf.json
src-tauri/src/: ai_stream.rs  ai_tools.rs  config.rs  db.rs  lib.rs  models.rs  notes_file.rs  routes_ai.rs  routes_export.rs  routes_import.rs  routes_notes.rs  routes_serve.rs
src/components/: MarkdownRenderer.vue  NoteForm.vue  QuizDialog.vue  SettingsDialog.vue
src/hooks/: useAIReview.ts  useNoteDetail.ts  usePublishNote.ts  useQuiz.ts  useViewNote.ts  useWaterfallLayout.ts
src/i18n/: index.ts
src/locales/: en.json  zh-CN.json
src/router/: index.ts
src/stores/: cache.ts  notes.ts
src/types/: index.ts
src/utils/: error.ts  export.ts  import.ts  pdf.ts  stream.ts  updateChecker.ts
(+4 files in other folders)
