[package]
name = "notes"
version = "0.1.0"
description = "Notes - 智能笔记应用"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
mime_guess = "2"
async-stream = "0.3"
urlencoding = "2"
regex-lite = "0.1"
base64 = "0.22"
